fixed css overflow issue of root div

--- a/frontend/src/CSS/App.css
+++ b/frontend/src/CSS/App.css
@@ -4,6 +4,7 @@
   width: 100vw;
   height: 100vh;
   align-items: center;
+  overflow-y: hidden;
 }
 
 .class_tab{
